Minor style changes for fixing firefox view landing.html overflow

--- a/htdocs/land.css
+++ b/htdocs/land.css
@@ -45,6 +45,7 @@ ul.tabs li {
     font-size: 0.8em;
     font-family: 'Oxygen', sans-serif;
     overflow: hidden;
+    max-height: 2.6em;
 }
 ul.tabs li#selected {
     background-color: rgba(60, 100, 200, 0.9);
